# Performia-system

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GUI_STATUS.md  IMPLEMENTATION_PLAN.md  LICENSE  MCP-STATUS.md  MCP_PLAYWRIGHT_SETUP.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_COMPLETE.md  STATUS.md  SYSTEM_STATUS.md  package.json  requirements.txt  requirements_all.txt  run.sh  run_performia.sh  setup_all.sh  setup_input.sh  start_full_system.sh  start_gui.sh  start_live.sh  start_mcp.sh  start_studio.sh  test-mcp.sh
PerformiaJUCE/: CMakeLists.txt  setup_juce.sh
PerformiaJUCE/Source/: AudioEngine.cpp  AudioEngine.h  LookAndFeel.cpp  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponent_fix.cpp  MainComponent_fix2.cpp
archive/: SESSION_LOG_2024-12-28.md  gui-package.json  index_musical_backup.js
archive/old_scripts/: analyze_gui.py  launch_gui_playwright.py
archive/old_tests/: test_audio.py  test_gui_demo.py  test_gui_playwright.py  test_input.py  test_simple_audio.py  test_system.py
config/: config.yaml  mcp_config.yaml  personalities.json
docs/: SETUP.md  SHARED_MEMORY_DESIGN.md  audio_input_integration.md
gui/: PARAMETER_SPECIFICATION.md  README.md  UX_DESIGN_RESEARCH.md  app.py  app_simple.py
gui/static/: main.js  style.css
gui/templates/: index.html
scripts/: auto_load_synthdefs.py  load_synthdefs.py  measure_latency.py  start_server.sh  start_supernova.sh
src/: __init__.py  main.py  main_simple.py  mcp_client.py
src/agents/: __init__.py  base_agent.py  ensemble_manager.py  (+2 more)
tests/: test_components.py  test_input_system.py
(+18 files in other folders)
